feat: add SEO and semantic tags

--- a/index.html
+++ b/index.html
@@ -3,10 +3,46 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Service Hub</title>
+
+  <!-- Title -->
+  <title>Service Hub | Ремонт и обслуживание автомобилей в Бресте</title>
+
+  <!-- Описание -->
+  <meta name="description" content="Предоставляем услуги по ремонту автомобилей, диагностике, техническому обслуживанию и замене запчастей. Качественный сервис и доступные цены.">
+
+  <!-- Ключевые слова -->
+  <meta name="keywords" content="автомастерская Брест, автосервис Дубровка, ремонт электрики авто, ремонт механики авто, автосервис Service Hub, ремонт автомобилей Брест, диагностика авто Брест">
+
+  <!-- Автор -->
+  <meta name="author" content="Service Hub">
+
+  <!-- Язык -->
+  <meta name="language" content="ru-RU">
+
+  <!-- Open Graph метатеги (для соцсетей) -->
+  <meta property="og:title" content="Service Hub | Ремонт и обслуживание автомобилей в Бресте">
+  <meta property="og:description" content="Услуги по ремонту и техобслуживанию автомобилей в районе Дубровка, Брест. Опытные мастера и качественные запчасти. Запишитесь прямо сейчас!">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://servicehub.by">
+  <meta property="og:image" content="https://servicehub.by/public/img/logo.png">
+  <meta property="og:locale" content="ru_RU">
+
+  <!-- Twitter Cards метатеги (для Twitter) -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Service Hub | Ремонт и обслуживание автомобилей в Бресте">
+  <meta name="twitter:description" content="Предлагаем качественный автосервис и ремонт в районе Дубровка, Брест. Запишитесь на обслуживание прямо сейчас!">
+  <meta name="twitter:image" content="https://servicehub.by/public/img/logo.png">
+
+  <!-- Canonical (для избежания дублей страниц) -->
+  <link rel="canonical" href="https://servicehub.by">
+
+  <!-- Favicon -->
+  <link rel="icon" href="/public/img/favicon.ico">
   <script type="module" src="/src/main.ts"></script>
 </head>
 <body>
+  <header id="header"></header>
   <div id="app"></div>
+  <footer id="footer"></footer>
 </body>
 </html>
