--- a/index.html
+++ b/index.html
@@ -39,6 +39,12 @@
   <!-- Favicon -->
   <link rel="icon" href="/public/img/favicon.ico">
   <script type="module" src="/src/main.ts"></script>
+  <link rel="stylesheet" href="./common.css">
+
+  <!-- Fonts open-sans -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 </head>
 <body>
   <header id="header"></header>
