--- a/src/main/index.html
+++ b/src/main/index.html
@@ -8,6 +8,8 @@
   <script type="module" src="./index.ts"></script>
 </head>
 <body>
-  <h1>Это главная страница</h1>
+  <main class="main">
+    <h1>Это главная страница</h1>
+  </main>
 </body>
 </html>
