feat: add main banner

--- a/src/main/index.html
+++ b/src/main/index.html
@@ -9,7 +9,36 @@
 </head>
 <body>
   <main class="main">
-    <h1>Это главная страница</h1>
+    <div class="container">
+      <div class="left-block">
+        <div class="text-overlay">
+            <h1>Ремонт<br>Автомобилей Любой<br>Сложности</h1>
+        </div>
+          <img src="./public/img/banner.jpg" alt="Автомобиль" class="main-image">
+      </div>
+
+      <div class="right-block">
+          <div class="offer-card technical-repair">
+            <div class="content">
+              <div class="discount-label">12% скидон</div>
+              <h2>Технический<br><span>Ремонт</span></h2>
+              <a href="#" class="call-to-action">Запишись Сейчас <span>→</span></a>
+            </div>
+            <img src="./public/icons/lamp.png" alt="icon" class="icon">
+          </div>
+
+          <div class="offer-card electric-repair">
+            <div class="content">
+              <div class="discount-label">12% скидон</div>
+              <h2>Ремонт<br>Электрики</h2>
+              <a href="#" class="call-to-action">Позвонить</a>
+            </div>
+            <img src="./public/icons/white-gear.png" alt="icon" class="icon">
+          </div>
+      </div>
+    </div>
+
+    <h5>main page</h5>
   </main>
 </body>
 </html>
