fix: correct bugs on banner section

--- a/src/common/header/index.html
+++ b/src/common/header/index.html
@@ -7,7 +7,7 @@
   <section class="header">
     <div class="container">
       <div class="left">
-        <a href="/#app" class="logo">
+        <a href="/#main" class="logo">
           <span>service</span>
           <span class="tag">hub</span>
         </a>
