--- a/src/main/index.html
+++ b/src/main/index.html
@@ -8,7 +8,7 @@
   <script type="module" src="./index.ts"></script>
 </head>
 <body>
-  <main class="main">
+  <main class="main" id="main">
     <div class="container">
       <div class="left-block">
         <div class="text-overlay">
